
== 3/17/12

Initial release.

== 3/18/12

Added hooks for subclassing.

== 3/19/12

Moved parent initialization to separate method (with call to initialize so existing behavior remains).
Now parent can be initialized after object initialization.

== 3/24/12

Added _without_hook methods to perform actions without calling hooks.

== 5/27/12

Added common CompositingObject support.
Added :parent_composite_hash reader.

== 5/31/12

Added :parent_composite_object and changed :parent_composite_hash to alias :parent_composite_object.